fix video data url

--- a/WIREWAXVPAID-8158912-Taboola-01142020/8158912/index.html
+++ b/WIREWAXVPAID-8158912-Taboola-01142020/8158912/index.html
@@ -116,7 +116,7 @@
                 tagUrl: 'public/offline/customs-release/tags/',
                 widgetUrl: 'public/offline/customs-release/widgets/',
                 moduleUrl: 'public/offline/customs-release/modules/',
-                vidDataUrl: 'public/offline/',
+                vidDataUrl: 'public/offline',
             vidId: "8158912"
         };
 
